Fix jury names on mobile

--- a/wordpress/wp-content/themes/bluearrow/assets/styles/_content.scss
+++ b/wordpress/wp-content/themes/bluearrow/assets/styles/_content.scss
@@ -156,7 +156,6 @@ main {
     font-weight: normal;
     position: relative;
     top: -40px;
-    text-align: left;
     padding: 0px 20px;
     letter-spacing: 1px;
     font-size: 14px;
